src/zephyr_c/kernel/zk_work.nim


## *
##  @brief Submit a work item to a user mode workqueue
##
##  Submits a work item to a workqueue that runs in user mode. A temporary
##  memory allocation is made from the caller's resource pool which is freed
##  once the worker thread consumes the k_work item. The workqueue
##  thread must have memory access to the k_work item being submitted. The caller
##  must have permission granted on the work_q parameter's queue object.
##
##  @funcprops \isr_ok
##
##  @param work_q Address of workqueue.
##  @param work Address of work item.
##
##  @retval -EBUSY if the work item was already in some workqueue
##  @retval -ENOMEM if no memory for thread resource pool allocation
##  @retval 0 Success
##
proc k_work_user_submit_to_queue*(work_q: ptr k_work_user_q; work: ptr k_work_user): cint {.
    importc: "$1", header: "kernel.h".}

## *
##  @brief Start a workqueue in user mode
##
##  This works identically to k_work_queue_start() except it is callable from
##  user mode, and the worker thread created will run in user mode.  The caller
##  must have permissions granted on both the work_q parameter's thread and
##  queue objects, and the same restrictions on priority apply as
##  k_thread_create().
##
##  @param work_q Address of workqueue.
##  @param stack Pointer to work queue thread's stack space, as defined by
## 		K_THREAD_STACK_DEFINE()
##  @param stack_size Size of the work queue thread's stack (in bytes), which
## 		should either be the same constant passed to
## 		K_THREAD_STACK_DEFINE() or the value of K_THREAD_STACK_SIZEOF().
##  @param prio Priority of the work queue's thread.
##  @param name optional thread name.  If not null a copy is made into the
## 		thread's name buffer.
##
##  @return N/A
##
proc k_work_user_queue_start*(work_q: ptr k_work_user_q;
                              stack: ptr k_thread_stack_t; stack_size: csize_t;
                              prio: cint; name: cstring) {.
    importc: "k_work_user_queue_start", header: "kernel.h".}


## * @}
## *
##  @cond INTERNAL_HIDDEN
##

## *
##  INTERNAL_HIDDEN @endcond
##
## *
##  @addtogroup workqueue_apis
##  @{
##
## *
##  @brief Initialize a statically-defined work item.
##
##  This macro can be used to initialize a statically-defined workqueue work
##  item, prior to its first use. For example,
##
##  @code static K_WORK_DEFINE(<work>, <work_handler>); @endcode
##
##  @param work Symbol name for work item object
##  @param work_handler Function to invoke each time work item is processed.
##
# proc K_WORK_DEFINE*(work: untyped; work_handler: untyped) {.
    # importc: "K_WORK_DEFINE", header: "kernel.h".}


## *
##  @brief Initialize a statically-defined delayed work item.
##
##  This macro can be used to initialize a statically-defined workqueue
##  delayed work item, prior to its first use. For example,
##
##  @code static K_DELAYED_WORK_DEFINE(<work>, <work_handler>); @endcode
##
##  @param work Symbol name for delayed work item object
##  @param work_handler Function to invoke each time work item is processed.
##
## *
##  @brief Initialize a triggered work item.
##
##  This routine initializes a workqueue triggered work item, prior to
##  its first use.
##
##  @param work Address of triggered work item.
##  @param handler Function to invoke each time work item is processed.
##
##  @return N/A
##
proc k_work_poll_init*(work: ptr k_work_poll; handler: k_work_handler_t) {.
    importc: "k_work_poll_init", header: "kernel.h".}


## *
##  @brief Submit a triggered work item.
##
##  This routine schedules work item @a work to be processed by workqueue
##  @a work_q when one of the given @a events is signaled. The routine
##  initiates internal poller for the work item and then returns to the caller.
##  Only when one of the watched events happen the work item is actually
##  submitted to the workqueue and becomes pending.
##
##  Submitting a previously submitted triggered work item that is still
##  waiting for the event cancels the existing submission and reschedules it
##  the using the new event list. Note that this behavior is inherently subject
##  to race conditions with the pre-existing triggered work item and work queue,
##  so care must be taken to synchronize such resubmissions externally.
##
##  @funcprops \isr_ok
##
##  @warning
##  Provided array of events as well as a triggered work item must be placed
##  in persistent memory (valid until work handler execution or work
##  cancellation) and cannot be modified after submission.
##
##  @param work_q Address of workqueue.
##  @param work Address of delayed work item.
##  @param events An array of events which trigger the work.
##  @param num_events The number of events in the array.
##  @param timeout Timeout after which the work will be scheduled
## 		  for execution even if not triggered.
##
##
##  @retval 0 Work item started watching for events.
##  @retval -EINVAL Work item is being processed or has completed its work.
##  @retval -EADDRINUSE Work item is pending on a different workqueue.
##
proc k_work_poll_submit_to_queue*(work_q: ptr k_work_q; work: ptr k_work_poll;
                                  events: ptr k_poll_event; num_events: cint;
                                  timeout: k_timeout_t): cint {.
    importc: "k_work_poll_submit_to_queue", header: "kernel.h".}


## *
##  @brief Submit a triggered work item to the system workqueue.
##
##  This routine schedules work item @a work to be processed by system
##  workqueue when one of the given @a events is signaled. The routine
##  initiates internal poller for the work item and then returns to the caller.
##  Only when one of the watched events happen the work item is actually
##  submitted to the workqueue and becomes pending.
##
##  Submitting a previously submitted triggered work item that is still
##  waiting for the event cancels the existing submission and reschedules it
##  the using the new event list. Note that this behavior is inherently subject
##  to race conditions with the pre-existing triggered work item and work queue,
##  so care must be taken to synchronize such resubmissions externally.
##
##  @funcprops \isr_ok
##
##  @warning
##  Provided array of events as well as a triggered work item must not be
##  modified until the item has been processed by the workqueue.
##
##  @param work Address of delayed work item.
##  @param events An array of events which trigger the work.
##  @param num_events The number of events in the array.
##  @param timeout Timeout after which the work will be scheduled
## 		  for execution even if not triggered.
##
##  @retval 0 Work item started watching for events.
##  @retval -EINVAL Work item is being processed or has completed its work.
##  @retval -EADDRINUSE Work item is pending on a different workqueue.
##
proc k_work_poll_submit*(work: ptr k_work_poll; events: ptr k_poll_event;
                        num_events: cint; timeout: k_timeout_t): cint {.
    importc: "k_work_poll_submit", header: "kernel.h".}


## *
##  @brief Cancel a triggered work item.
##
##  This routine cancels the submission of triggered work item @a work.
##  A triggered work item can only be canceled if no event triggered work
##  submission.
##
##  @funcprops \isr_ok
##
##  @param work Address of delayed work item.
##
##  @retval 0 Work item canceled.
##  @retval -EINVAL Work item is being processed or has completed its work.
##
proc k_work_poll_cancel*(work: ptr k_work_poll): cint {.
    importc: "k_work_poll_cancel", header: "kernel.h".}

